--- a/src/styles/sass/layout/_navigation.scss
+++ b/src/styles/sass/layout/_navigation.scss
@@ -1,4 +1,6 @@
 .dashboard-nav{
+    background-color: $color-neutral-100;
+    box-shadow: $box-shadow-200;
     &__container{
         display: flex;
         align-items: center;
