--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -8,9 +8,12 @@
 
 @import './components/card';
 @import './components/btn';
+@import './components/badges';
 @import './components/dropdown';
 @import './components/sidebar';
 @import './components/searchbar';
+@import './components/calendarFilter';
+@import './components/module';
 @import './components/dashboard';
 
 @import './layout/navigation';
