--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -42,15 +42,20 @@ $color-orange-200: #ffd198;
 $color-orange-100: #fff3e4;
 
 
+//BOX SHADOWS
+$box-shadow-200: 0 2px 12px 0 rgba(11, 22, 44, 0.05);
+$box-shadow-300: 0 2px 10px 0 rgba(25, 93, 194, 0.07);
+
 // FONT
 $default-font-size: 1.6rem;
 
 $font-bold: 700;
 $font-medium: 500;
 $font-regular: 400;
+$font-thin: 300;
 
 
 // GRID
 $grid-width: 114rem;
-$gutter-vertical: 8rem;
-$gutter-horizontal: 6rem;
+$gutter-vertical: 2.4rem;
+$gutter-horizontal: 2.4rem;
