--- a/src/styles/sass/base/_typography.scss
+++ b/src/styles/sass/base/_typography.scss
@@ -8,32 +8,32 @@ body {
 
 // HEADING
 
-h1{
+h1, .h1{
     font-size: 4.2rem;
     color: $color-neutral-800;
 }
 
-h2{
+h2, .h2{
     font-size: 3.2rem;
     color: $color-neutral-800;
 }
 
-h3{
+h3, .h3{
     font-size: 2.4rem;
     color: $color-neutral-800;
 }
 
-h4{
+h4, .h4{
     font-size: 2.2rem;
     color: $color-neutral-800;
 }
 
-h5{
+h5, .h5{
     font-size: 1.8rem;
     color: $color-neutral-800;
 }
 
-h6{
+h6, .h6{
     font-size: 1.6rem;
     color: $color-neutral-800;
 }
@@ -100,6 +100,10 @@ p, .paragraph-default{
         &--bold{
             font-weight: $font-bold;
         }
+
+        &--white{
+            color: $color-neutral-100;
+        }
     }
 
     &__300{
@@ -111,7 +115,16 @@ p, .paragraph-default{
             font-weight: $font-medium;
         }
         &--bold{
+            color: $color-neutral-800;
             font-weight: $font-bold;
+        }
+
+        &--white{
+            color: $color-neutral-100;
+        }
+
+        &--blue{
+            color: $color-primary;
         }
     }
 
@@ -124,7 +137,12 @@ p, .paragraph-default{
             font-weight: $font-medium;
         }
         &--bold{
+            color: $color-neutral-800;
             font-weight: $font-bold;
+        }
+
+        &--green{
+            color: $color-green-300;
         }
     }
 
@@ -137,7 +155,12 @@ p, .paragraph-default{
             font-weight: $font-medium;
         }
         &--bold{
+            color: $color-neutral-800;
             font-weight: $font-bold;
+        }
+
+        &--white{
+            color: $color-neutral-100;
         }
     }
 
@@ -147,7 +170,12 @@ p, .paragraph-default{
             font-weight: $font-medium;
         }
         &--bold{
+            color: $color-neutral-800;
             font-weight: $font-bold;
+        }
+
+        &--white{
+            color: $color-neutral-100;
         }
     }
 }
@@ -165,4 +193,8 @@ p, .paragraph-default{
     &--text{
         display: inline-block;
     }
+}
+
+.bold{
+    font-weight: 700;
 }
