--- a/src/styles/sass/base/_utilities.scss
+++ b/src/styles/sass/base/_utilities.scss
@@ -15,3 +15,99 @@
 .mt-auto{
     margin-top: auto;
 }
+
+.ml-auto{
+    margin-left: auto;
+}
+
+.mb-auto{
+    margin-bottom: auto;
+}
+
+.mr-12{
+    margin-right: 1.2em;
+}
+.mr-16{
+    margin-right: 1.6em;
+}
+
+.w-100{
+    width: 100%;
+}
+
+.h-100{
+    min-height: 100%;
+}
+
+.center-content{
+    justify-content: center;
+}
+
+.flex{
+    display: flex;
+
+    &--between{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.inline-block{
+    display: inline;
+}
+
+.child{
+    width: 100%;
+}
+
+//GRID 
+.grid{
+    .row {
+        max-width: 100%;
+        margin: 0 auto;
+        &:not(:last-child) {
+            margin-bottom: $gutter-vertical;
+        }
+    
+        &::after {
+            content: "";
+            display: table;
+            clear: both;
+        }
+    
+        [class^="col-"] {
+            float: left;
+            padding: 1rem;
+            &:not(:last-child) {
+                margin-right: $gutter-horizontal;
+            }
+        }
+    
+        .col-1-of-2 {
+            width: calc((100% - #{$gutter-horizontal}) / 2);
+    
+        }
+    
+        .col-1-of-3 {
+            width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+        }
+    
+        .col-2-of-3 {
+            width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
+        }
+    
+        .col-1-of-4 {
+            width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+        }
+    
+        .col-2-of-4 {
+            width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
+        }
+    
+        .col-3-of-4 {
+            width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+        }
+    
+    }
+}
+
