--- a/src/styles/sass/components/_sidebar.scss
+++ b/src/styles/sass/components/_sidebar.scss
@@ -1,3 +1,5 @@
+
+
 .sidebar {
     max-height: 100vh;
   &__wrapper {
@@ -5,14 +7,14 @@
     width: 100%;
     height: 100vh;
     max-width: 30rem;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
+    // position: fixed;
+    // top: 0;
+    // left: 0;
+    // bottom: 0;
     right: auto;
-    background-color: $color-neutral-400;
-    z-index: 500;
-    overflow: auto;
+    background-color: $color-neutral-100;
+    // z-index: 500;
+    // overflow: auto;
   }
 
   &__content-section{
