--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -29,10 +29,11 @@ body {
 }
 
 .container-default{
-    padding: 0px 2.4rem;
-    margin: 0 auto;
-    max-width: 10.92rem;
-    min-width: 100%;
+max-width: 1092px;
+padding-right: 2.4rem;
+padding-left: 2.4rem;
+margin-left: auto;
+margin-right: auto;
   }
 
 .mb-32px{
