--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -57,6 +57,8 @@ $font-thin: 300;
 
 
 // GRID
+// GRID
 $grid-width: 114rem;
-$gutter-vertical: 2.4rem;
-$gutter-horizontal: 2.4rem;
+$gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
+$gutter-horizontal: 6rem;
