--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -1,10 +1,11 @@
-@import './abstracts//mixins';
-@import './abstracts/variables';
-@import './abstracts/functions';
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-@import './base/base';
-@import './base/typography';
-@import './base/utilities';
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
 @import './components/card';
 @import './components/btn';
@@ -18,8 +19,9 @@
 @import './components/forms';
 @import './components/dashboard';
 
-@import './layout/navigation';
 @import './layout/footer';
+@import './layout/grid';
+@import './layout/navigation';
 
 @import './pages/products';
 @import './pages/home';
