Added price card section

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -24,5 +24,6 @@
 @import './layout/navigation';
 
 @import './pages/products';
+@import './pages/pricing';
 @import './pages/home';
 @import './pages/login';
