--- a/src/styles/sass/abstracts/_variables.scss
+++ b/src/styles/sass/abstracts/_variables.scss
@@ -47,6 +47,8 @@ $box-shadow-100: 0 2px 10px 0 rgb(25 93 194 / 7%);
 $box-shadow-200: 0 2px 12px 0 rgba(11, 22, 44, 0.05);
 $box-shadow-300: 0 2px 10px 0 rgba(25, 93, 194, 0.07);
 
+$color-btn-shadow: 0 4px 10px 0 rgb(20 20 43 / 4%);
+
 // FONT
 $default-font-size: 1.6rem;
 
