--- a/src/styles/sass/base/_utilities.scss
+++ b/src/styles/sass/base/_utilities.scss
@@ -35,18 +35,31 @@
 .mr-24px{
     margin-bottom: 2.4rem;
 }
-
-.mb-32{
-    margin-bottom: 3.2rem;
+.mb-8{
+    margin-bottom: 0.8rem;
 }
+
 
 .mb-16{
     margin-bottom: 1.6rem;
 }
 
+.mb-20{
+    margin-bottom: 2rem;
+}
+
+.mb-24{
+    margin-bottom: 2.4rem;
+}
+
+.mb-32{
+    margin-bottom: 3.2rem;
+}
+
 .mr-12{
     margin-right: 1.2em;
 }
+
 .mr-16{
     margin-right: 1.6em;
 }
@@ -61,6 +74,19 @@
 
 .center-content{
     justify-content: center;
+}
+
+.divider{
+    height: 1px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    background-color: #e9eaf3;
+    &__32{
+        height: 1px;
+        background-color: #e9eaf3;
+        margin-top: 3.2rem;
+        margin-bottom: 3.2rem;
+    }
 }
 
 .flex{
@@ -81,6 +107,14 @@
         display: flex;
         flex-direction: column;
     }
+
+    &__align-end{
+        display: flex;
+        -webkit-box-align: end;
+        -webkit-align-items: flex-end;
+        -ms-flex-align: end;
+        align-items: flex-end;
+    }
 }
 
 .inline-block{
@@ -92,6 +126,11 @@
 }
 
 //GRID 
+
+.gap-16{
+    grid-column-gap: 1.6rem;
+    grid-row-gap: 1.6rem;
+}
 .grid{
     .row {
         max-width: 100%;
