Added profile page and some styles to it

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -23,6 +23,7 @@
 @import './layout/grid';
 @import './layout/navigation';
 
+@import './pages/profile';
 @import './pages/products';
 @import './pages/pricing';
 @import './pages/home';
