--- a/src/styles/sass/base/_utilities.scss
+++ b/src/styles/sass/base/_utilities.scss
@@ -131,53 +131,53 @@
     grid-column-gap: 1.6rem;
     grid-row-gap: 1.6rem;
 }
-.grid{
-    .row {
-        max-width: 100%;
-        margin: 0 auto;
-        &:not(:last-child) {
-            margin-bottom: $gutter-vertical;
-        }
+// .grid{
+//     .row {
+//         max-width: 100%;
+//         margin: 0 auto;
+//         &:not(:last-child) {
+//             margin-bottom: $gutter-vertical;
+//         }
     
-        &::after {
-            content: "";
-            display: table;
-            clear: both;
-        }
+//         &::after {
+//             content: "";
+//             display: table;
+//             clear: both;
+//         }
     
-        [class^="col-"] {
-            float: left;
-            padding: 1rem;
-            &:not(:last-child) {
-                margin-right: $gutter-horizontal;
-            }
-        }
+//         [class^="col-"] {
+//             float: left;
+//             padding: 1rem;
+//             &:not(:last-child) {
+//                 margin-right: $gutter-horizontal;
+//             }
+//         }
     
-        .col-1-of-2 {
-            width: calc((100% - #{$gutter-horizontal}) / 2);
+//         .col-1-of-2 {
+//             width: calc((100% - #{$gutter-horizontal}) / 2);
     
-        }
+//         }
     
-        .col-1-of-3 {
-            width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
-        }
+//         .col-1-of-3 {
+//             width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+//         }
     
-        .col-2-of-3 {
-            width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
-        }
+//         .col-2-of-3 {
+//             width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
+//         }
     
-        .col-1-of-4 {
-            width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
-        }
+//         .col-1-of-4 {
+//             width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+//         }
     
-        .col-2-of-4 {
-            width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
-        }
+//         .col-2-of-4 {
+//             width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
+//         }
     
-        .col-3-of-4 {
-            width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
-        }
+//         .col-3-of-4 {
+//             width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+//         }
     
-    }
-}
+//     }
+// }
 
