--- a/src/styles/sass/pages/_pricing.scss
+++ b/src/styles/sass/pages/_pricing.scss
@@ -17,5 +17,9 @@
         border-radius: 3rem;
         text-decoration: none;
     }
+    .featured{
+        border-width: 2px;
+    border-color: #1476ff;
+    }
 
 }
