--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -7,24 +7,25 @@
 @import "base/typography";
 @import "base/utilities";
 
-@import './components/card';
-@import './components/btn';
-@import './components/badges';
-@import './components/messages/messages';
-@import './components/dropdown';
-@import './components/sidebar';
-@import './components/searchbar';
-@import './components/calendarFilter';
-@import './components/module';
-@import './components/forms';
-@import './components/dashboard';
+@import "./components/card";
+@import "./components/btn";
+@import "./components/badges";
+@import "./components/messages/messages";
+@import "./components/dropdown";
+@import "./components/sidebar";
+@import "./components/searchbar";
+@import "./components/calendarFilter";
+@import "./components/module";
+@import "./components/forms";
+@import "./components/dashboard";
 
-@import './layout/footer';
-@import './layout/grid';
-@import './layout/navigation';
+@import "./layout/footer";
+@import "./layout/grid";
+@import "./layout/navigation";
 
-@import './pages/profile';
-@import './pages/products';
-@import './pages/pricing';
-@import './pages/home';
-@import './pages/login';
+@import "./pages/dashboard";
+@import "./pages/profile";
+@import "./pages/products";
+@import "./pages/pricing";
+@import "./pages/home";
+@import "./pages/login";
